<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/storage_settings">
        <Preference
            app:key="game_path"
            app:title="@string/game_data_location"
            app:summary="Storage path will be updated automatically" />
            
        <SwitchPreferenceCompat
            app:key="storage_toggle"
            app:title="@string/toggle_storage_location"
            app:summaryOn="@string/using_internal_storage"
            app:summaryOff="@string/using_external_storage"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/global_settings">
        <Preference
            app:key="global_arguments"
            app:title="@string/global_command_line"
            app:summary="set any arguments" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/resolution_settings">
        <EditTextPreference
            app:key="resolution_width"
            app:title="@string/resolution_width"
            app:dialogTitle="@string/resolution_width_dialog"
            app:defaultValue="0" />
            
        <EditTextPreference
            app:key="resolution_height"
            app:title="@string/resolution_height"
            app:dialogTitle="@string/resolution_height_dialog"
            app:defaultValue="0" />
            
        <EditTextPreference
            app:key="resolution_scale"
            app:title="@string/resolution_scale"
            app:dialogTitle="@string/resolution_scale_dialog"
            app:defaultValue="1.0" />
    </PreferenceCategory>

</PreferenceScreen>
